tests/parsing/fail/spawn-01.stderr
error: expected identifier
 --> tests/parsing/fail/spawn-01.rs:8:25
  |
8 |         a : int = spawn 0;
  |                         ^
